# production_rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 5b9df1ff946e_create_documents_table.py
docker/: docker-compose.yaml
docker/env/: .env.example.postgres  .env.example.rabbitmq
notebooks/: rag_01.ipynb
scripts/: ingest.py  query.py
src/rag_project/: __init__.py  cli.py
src/rag_project/config/: __init__.py  settings.py
src/rag_project/database/: base.py  connection.py  models.py
src/rag_project/embeddings/: __init__.py  embedder.py
src/rag_project/generation/: __init__.py  llm.py
src/rag_project/ingestion/: __init__.py  azure_ingestion.py  blob_loader.py  chunker.py  document_loader.py  models.py  sources.py
src/rag_project/observability/: __init__.py  config.py  formatter.py  logger.py
src/rag_project/pipeline/: __init__.py  rag.py
src/rag_project/repositories/: document_repository.py
src/rag_project/retrieval/: __init__.py  retriever.py
src/rag_project/scanner/: folder_watcher.py  initial_scanner.py
src/rag_project/schema/: document.py
src/rag_project/scripts/: ingest_doc.py  run_initial_scan.py  start_watcher.py
src/rag_project/services/: hash_service.py  ingestion_service.py  metadata_service.py
src/rag_project/vectorstore/: __init__.py  store.py
src/rag_project/workers/: celery_app.py  publisher.py  tasks.py
tests/: test_azure_ingestion.py  test_blob_loader.py  test_chunker.py
